three random images will load on page, will go nowhere

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>BusMall&copy;</title>
   </head>
   <body>
-    <h1>BusMall&copy; Product Test</h1>
-    <p>Welcome to the <strong>BusMall</strong>&copy; product test page! Here we will show you some images and through the power of your clicks you will tell us which products you would like us to sell!</p>
+    <h1>BusMall Products</h1>
+    <p>Welcome to the BusMall product test page! Here we will show you some images and through the power of your clicks you will tell us which products you would like us to sell!</p>
     <div id='imgHolder'>
       <img  id='img1' />
       <img  id='img2' />
