add ferris bueller reference, added p tag to index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <img  id='img2' />
       <img  id='img3' />
     </div>
+    <p id='done'></p>
   </body>
   <script src="app.js" charset="utf-8"></script>
 </html>
