--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>BusMall&copy;</title>
   </head>
   <body>
     <h1>BusMall Products</h1>
     <p>Welcome to the BusMall product test page! Here we will show you some images and through the power of your clicks you will tell us which products you would like us to sell!</p>
-    <div id='imgHolder'>
-      <img  id='img1' />
-      <img  id='img2' />
-      <img  id='img3' />
-    </div>
-    <p id='done'></p>
+    <section id='imgHolder'>
+      <div id='img1'>
+        <img />
+      </div>
+      <div id='img2'>
+        <img />
+      </div>
+      <div id='img3'>
+        <img />
+      </div>
+    </section>
   </body>
   <script src="app.js" charset="utf-8"></script>
 </html>
