--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div id='img3'>
         <img />
       </div>
+      <ul id='results'>
+      </ul>
     </section>
   </body>
   <script src="app.js" charset="utf-8"></script>
