--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js" charset="utf-8"></script>
     <title>BusMall&copy;</title>
   </head>
   <body>
@@ -18,6 +19,9 @@
       <div id='img3'>
         <img />
       </div>
+    </section>
+    <section id='dasChart'>
+      <canvas id="canvas" width="300" height="300"></canvas>
     </section>
   </body>
   <script src="app.js" charset="utf-8"></script>
