--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/n06.png">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|PT+Sans+Narrow" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js" charset="utf-8"></script>
     <title>BusMall&copy;</title>
   </head>
   <body>
-    <h1>BusMall Products</h1>
-    <p>Welcome to the BusMall product test page! Here we will show you some images and through the power of your clicks you will tell us which products you would like us to sell!</p>
+    <h1>BusMall&copy; Products</h1>
+    <p>Welcome to the BusMall&copy; product test page! Here we will show you some images and through the power of your clicks you will tell us which products you would like us to sell!</p>
+    <p>You will be given 25 chances to vote on your favorite products. Each click of yours will display 3 new images for you to choose from BUT DON'T WORRY! If you really liked one it will be back so you can click on it again!</p>
     <section id='imgHolder'>
       <div id='img1'>
         <img />
