none css fun. getting list to show up

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <img />
       </div>
     </section>
+    <p>
+      <ul id='daList'></ul>
+    </p>
     <section id='dasChart'>
       <canvas id="canvas" width="300" height="300"></canvas>
     </section>
