list is showing and thankfully only one time!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <img />
       </div>
     </section>
+    <ul id='list'>
+
+    </ul>
   </body>
   <script src="app.js" charset="utf-8"></script>
 </html>
