GOT EVERYTHING SHOWING UP AND ONLY KIND OF WANT TO DIE

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <img />
       </div>
     </section>
+    <div class=clearfix></div>
+    <ul id='list'></ul>
     <section id='dasChart'>
       <canvas id="canvas" width="300" height="300"></canvas>
     </section>
